fix modal z-index'

--- a/src/components/Modal/styles.module.css
+++ b/src/components/Modal/styles.module.css
@@ -11,6 +11,7 @@
   justify-content: center;
   background-color: #4b4a4aaf;
   cursor: default;
+  z-index: 1;
 }
 .modal_dialog {
   background-color: #fff;
